# casimirbot-

./: .codex-docs-route-fill-theory-i18n.mjs  .codex-i18n-translation-cache.json  .codex-live-lane-fill-theory-i18n.mjs  .codex-openai-fill-theory-i18n.mjs  .codex-theory-i18n-cache.tmp.json  .codex-theory-i18n-skipped.tmp.json  .codex-theory-shared-rows.tmp.json  .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .replit  .replitignore  .tmp-ask-fail-closed.json  .tmp-ask-tech.json  .tmp-ask-warp-def.json  .tmp-chain.ts  .tmp-debug-cap.ts  .tmp-debug-e17.ts  .tmp-debug-helix-followup.ts  .tmp-debug-that-note.ts  .tmp-e151-debug.mjs  .tmp-e152-live-identify.json  .tmp-e152-live-search.json  .tmp-e21-context.ts  .tmp-e21-debug.ts  .tmp-e24-debug.ts  .tmp-e25-debug.ts  .tmp-e50-live-probe.ts  .tmp-finalize-check.mjs  .tmp-helix-ask-active-mixed-final-debug.json  .tmp-helix-flow-proxy.ts  .tmp-helix-probe.mjs  .tmp-inspect-canon.ts  .tmp-inspect-debug.ts  .tmp-inspect-repo-turn.ts  .tmp-latest-nhm2-warp-solve-debug.json  .tmp-latest-nhm2-warp-solve-response.json  .tmp-live-5064-contract-payload.json  (+116 more)
%TEMP%/: agi.plan.esbuild-check.mjs
.codex-tmp/: boundary-vitest.json  route-mounted-server.ts
.githooks/: pre-commit
.github/: copilot-instructions.md
.tmp/: agi.plan.build.js  casimir-verify.transpiled.mjs
artifacts/: adapter-request.json  ask-debug-extract.json  ask-job-create.json  ask-job-final.json  ask-jobs-debug-extract.json  ask-proof.json  casimir-params.json  casimir-verify.json  casimir-verify.out.txt  culpability.json  env-key-check.json  (+8 more)
(+12268 files in other folders)
