[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.2.0",
    "contourpy>=1.1.0",
    "drms>=0.7.1",
    "cdflib>=1.3.2",
    "h5netcdf>=1.2.0",
    "h5py>=3.9.0",
    "matplotlib>=3.8.0",
    "mpl-animators>=1.2.0",
    "numpy>=2.3.2",
    "plotly>=6.2.0",
    "requests>=2.32.4",
    "reproject>=0.12.0",
    "streamlit>=1.47.1",
    "sunpy>=7.0.3",
    "zeep>=4.3.0",
]
